[sc-14207] [sc-14051] update nav bar to reflect more current design system mocks, fix wrapping nav bar buttons, hand icon on hover

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -99,18 +99,16 @@
 }
 
 .App__header {
-  padding: 15px;
-  border-bottom: 1px solid $gray-light;
   background-color: $background;
-
+  border-bottom: 1px solid $justfix-white;
   display: flex;
-
   justify-content: space-between;
   align-items: center;
   position: relative;
+  padding: 0 1.5rem 0 2rem;
 
   @include for-phone-only {
-    padding: 10px 8px 8px;
+    padding: 0 1.5rem 0 1.5rem;
   }
 
   &.wowza-styling {
@@ -144,15 +142,9 @@
   }
 
   h1.page-title {
-    margin: 0;
+    @include mobile-h2;
+    margin: 0 0 0 1.5rem;
     color: $justfix-white;
-    line-height: 1.2;
-    font-weight: bold;
-    font-size: 1.13rem;
-
-    @include for-tablet-portrait-up() {
-      font-size: 1.5rem;
-    }
   }
 
   & > a,
@@ -162,15 +154,15 @@
   }
 
   & > a {
-    display: block;
-    position: absolute;
     width: fit-content;
     max-width: 75%;
     text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0 -0.63rem 0;
+    display: flex;
+    align-items: center;
+
+    .jf-logo {
+      margin-right: 1.5rem;
+    }
   }
 
   nav {
@@ -178,13 +170,10 @@
     flex-wrap: nowrap;
     margin-left: auto;
     text-align: end;
+    align-items: center;
 
     @include for-tablet-landscape-down {
       align-items: center;
-    }
-
-    @include for-desktop-down {
-      max-width: 250px;
     }
 
     a,
@@ -197,7 +186,6 @@
       &.active,
       &:hover {
         text-decoration: none;
-        cursor: default;
       }
     }
 
